<resources>
    <string name="app_name">PiDonor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="dob">DOB</string>
    <string name="sex">Sex</string>
    <string name="please_fill_in_your_information">Please fill in your information</string>
    <string name="uploading">Uploading..</string>
</resources>